@@ -60,6 +60,8 @@ dependencies {
   implementation ('org.apache.taglibs:taglibs-standard-impl:1.2.5') { transitive = false }
   implementation ('com.google.code.gson:gson:2.8.6') { transitive = false }
   implementation ('com.jcraft:jsch:0.1.55') { transitive = false }
+  implementation ('javax.mail:mail:1.4.7') { transitive = false }
+  implementation ('com.sun.activation:javax.activation:1.2.0') { transitive = false }
 
   // Only needed when using jsp
   // implementation ('javax.servlet:jstl:1.2') { transitive = false }
